完成前端界面demo